added customer mobile in invoice

--- a/POS/static/ngTemplates/app.POS.invoices.html
+++ b/POS/static/ngTemplates/app.POS.invoices.html
@@ -1,9 +1,19 @@
 
 <div class="row" ng-if="!posShowAll" style="font-size:35px">
-  <div class="col-md-5">
+  <div class="col-md-4">
     <label>Invoice Serial Number</label> - {{form.serialNumber}}
   </div>
-  <div class="col-md-7">
+  <div class="col-md-3">
+    <div class="input-group">
+      <input type="text" ng-model="form.cMobileNumber" class="form-control" placeholder="Enter Customer Mobile Number">
+      <span class="input-group-btn">
+        <button type="button" class="btn btn-success" ng-click="customerSeacrh()">Search</button>
+      </span>
+    </div>
+    <p class="help-block" style="color:green;font-size:15px" ng-if="form.customer.pk">Our Customer ....</p>
+
+  </div>
+  <div class="col-md-5">
     <div class="col-md-7">
       <span ng-if="multiStore" style="font-size:21px">
         <div class="col-md-3 text-right">
@@ -97,6 +107,7 @@
             <option value="netBanking">Net Banking</option>
             <option value="card">Card</option>
             <option value="cheque">Cheque</option>
+            <option value="cashOnDelivery">Cash On Delivery</option>
           </select>
         </div>
       </div>
