--- a/POS/static/ngTemplates/app.POS.invoice.item.html
+++ b/POS/static/ngTemplates/app.POS.invoice.item.html
@@ -1,6 +1,6 @@
 
 <div class="col-md-6">
-  <div class="cards" style="border:0.5px solid #4192cd;box-shadow:0 2px 8px rgba(26,24,20,0.2);margin-bottom: 25px;padding-bottom:10px;height:15vh" ng-controller="POS.invoice.item">
+  <div class="cards" style="border:0.5px solid #4192cd;box-shadow:0 2px 8px rgba(26,24,20,0.2);margin-bottom: 25px;padding-bottom:10px;height:15vh;background-color:{{data.status=='Completed'?'white':'#a3d292'}}" ng-controller="POS.invoice.item">
     <div class="row" ng-mouseenter="hover = true;" ng-mouseleave="hover = false;">
       <div class="col-md-2 text-center" style="padding-top: 20px;">
         <span style="font-size: 30px;">{{data.pk}}</span>
