--- a/POS/static/ngTemplates/app.POS.product.payPopup.html
+++ b/POS/static/ngTemplates/app.POS.product.payPopup.html
@@ -107,7 +107,10 @@
     </div>
   </div>
   <div class="row text-center" style="margin-top:5px">
-      <div class="btn btn-default" style="font-size:40px" ng-click="savePosPopup()" ng-if="!posSaved">
+    <div class="btn btn-primary" style="font-size:40px" ng-click="savePosPopup('COD')" ng-if="!posSaved">
+      Cash On Delivery
+    </div>
+      <div class="btn btn-success" style="font-size:40px" ng-click="savePosPopup('PAYED')" ng-if="!posSaved">
         Save
       </div>
       <div class="btn btn-default" style="font-size:40px" ng-click="CancelPosPopup()" ng-if="posSaved">
