contact details and cookies page

--- a/homepage/static/ngTemplates/app.homepage.contact_us.html
+++ b/homepage/static/ngTemplates/app.homepage.contact_us.html
@@ -25,8 +25,8 @@
           <strong>4th floor Parappana Agrahara Main Rd, Kudlu, Bengaluru, Karnataka -- 560068</strong> </div>
         <div class="col-md-3">
           </div>
-        <div class="col-md-4 "><i class="fa fa-phone" aria-hidden="true"></i> <strong>+91 9937634983</strong><br>
-        <i class="fa fa-envelope" aria-hidden="true"></i> <strong>info@epsilonai.in</strong></div>
+        <div class="col-md-4 "><i class="fa fa-phone" aria-hidden="true"></i> <strong>+91 7840850111</strong><br>
+        <i class="fa fa-envelope" aria-hidden="true"></i> <strong>info@epsilonai.com</strong></div>
       </div>
     </div>
     <div class="col-md-4 col-sm-12" style="padding:10px;">
