--- a/support/static/ngTemplates/app.projects.service.create.html
+++ b/support/static/ngTemplates/app.projects.service.create.html
@@ -8,8 +8,16 @@
     <input type="text " class="form-control" ng-model="form.service">
   </div>
   <div class="form-group">
+    <label>Name</label>
+    <input type="text " class="form-control" ng-model="form.customerName">
+  </div>
+  <div class="form-group">
     <label>Telephone</label>
     <input type="text " class="form-control" ng-model="form.telephone">
+  </div>
+  <div class="form-group">
+    <label>Email</label>
+    <input type="text" class="form-control" ng-model="form.email">
   </div>
   <div class="form-group">
     <label>About</label>
