--- a/ecommerce/static/ngTemplates/app.ecommerce.header.html
+++ b/ecommerce/static/ngTemplates/app.ecommerce.header.html
@@ -10,16 +10,16 @@
   <div class="col-xs-2 text-center hidden-xs hidden-sm" ng-if="!SortByCategory&&topIcon" style="padding-top:2px;">
     <img ng-click="$state.go('ecommerce')" src="{{ICON_LOGO}}" style="height:40px;cursor:pointer;" alt="">
   </div>
-  <div class="col-xs-2 text-center hidden-xs hidden-sm" style="padding-top:2px;font-size:28px;color:var(--themeColor);cursor:pointer;" ng-if="!topIcon&&!SortByCategory">
-    <i ng-click="$state.go('ecommerce')" class="fa fa-home" aria-hidden="true"></i>
+  <div class="col-xs-2 text-center hidden-xs hidden-sm" style="padding-top:10px;font-size:17px;color:var(--themeColor);cursor:pointer;" ng-if="!topIcon&&!SortByCategory">
+    <i ng-click="$state.go('ecommerce')" class="fa fa-home fa-lg" aria-hidden="true"></i>
   </div>
 
   <div class="col-xs-{{SortByCategory?'3':'2'}} text-center hidden-xs hidden-sm" ng-if="SortByCategory">
     <div class="col-xs-6 " style="padding-top:3px;" ng-if="topIcon">
       <img ng-click="$state.go('ecommerce')" src="{{ICON_LOGO}}" style="height:40px;cursor:pointer;" alt="" >
     </div>
-    <div class="col-xs-6 text-center hidden-xs hidden-sm" style="padding-top:2px;font-size:28px;color:var(--themeColor);cursor:pointer;" ng-if="!topIcon">
-      <i ng-click="$state.go('ecommerce')" class="fa fa-home" aria-hidden="true"></i>
+    <div class="col-xs-6 text-center hidden-xs hidden-sm" style="padding-top:10px;font-size:17px;color:var(--themeColor);cursor:pointer;" ng-if="!topIcon">
+      <i ng-click="$state.go('ecommerce')" class="fa fa-home fa-lg" aria-hidden="true"></i>
     </div>
 
     <div class="col-xs-6 " >
@@ -53,8 +53,8 @@
     <img ng-click="$state.go('ecommerce')" src="{{ICON_LOGO}}" style="height:40px;cursor:pointer;" alt="">
   </div>
 
-  <div class="col-xs-2 hidden-md hidden-lg" style="padding-top:2px;font-size:28px;color:var(--themeColor);cursor:pointer;" ng-if="!topIcon">
-    <i ng-click="$state.go('ecommerce')" class="fa fa-home" aria-hidden="true"></i>
+  <div class="col-xs-2 hidden-md hidden-lg" style="padding-top:2px;font-size:13px;color:var(--themeColor);cursor:pointer;" ng-if="!topIcon">
+    <i ng-click="$state.go('ecommerce')" class="fa fa-home fa-lg" aria-hidden="true"></i>
   </div>
 
 
@@ -89,8 +89,8 @@
 
   <div class="col-md-4 text-right hidden-xs hidden-sm" ng-if="!me.pk">
     <span ng-click="openPinPopup()" style="cursor:pointer;font-size:17px;padding-right:30px;color:var(--themeColor)" ng-if="pin!=0 && pin!=''" title="Change Pincode">{{pin}} <i class="fa fa-pencil fa-lg"></i></span>
-    <span style="cursor:pointer;font-size:17px;padding-right:30px;color:var(--themeColor)" ng-click="loginPage()"> Login <i class="fa fa-user fa-lg"></i></span>
-    <span style="cursor:pointer;font-size:17px;color:var(--themeColor)" ng-click="registerPage()"> Register <i class="fa fa-registered fa-lg"></i></span>
+    <span style="cursor:pointer;font-size:17px;padding-right:30px;color:var(--themeColor)" ng-click="loginPage()"> Login <i class="fa fa-sign-in fa-lg"></i></span>
+    <span style="cursor:pointer;font-size:17px;color:var(--themeColor)" ng-click="registerPage()"> Register <i class="fa fa-user-plus fa-lg"></i></span>
 
   </div>
 
@@ -105,8 +105,8 @@
 
   <div class="col-xs-10 text-right hidden-md hidden-lg" ng-if="!me.pk">
     <span ng-click="openPinPopup()" style="cursor:pointer;font-size:13px;padding-right:10px;color:var(--themeColor)" ng-if="pin!=0 && pin!=''" title="Change Pincode">{{pin}} <i class="fa fa-pencil fa-lg"></i></span>&nbsp;&nbsp;
-    <span style="cursor:pointer;font-size:13px;padding-right:10px;color:var(--themeColor)" ng-click="loginPage()">  <i class="fa fa-user fa-lg"></i></span>&nbsp;&nbsp;
-    <span style="cursor:pointer;font-size:13px;color:var(--themeColor)" ng-click="registerPage()">  <i class="fa fa-registered fa-lg"></i></span>&nbsp;&nbsp;
+    <span style="cursor:pointer;font-size:13px;padding-right:10px;color:var(--themeColor)" ng-click="loginPage()">  <i class="fa fa-sign-in fa-lg"></i></span>&nbsp;&nbsp;
+    <span style="cursor:pointer;font-size:13px;color:var(--themeColor)" ng-click="registerPage()">  <i class="fa fa-user-plus fa-lg"></i></span>&nbsp;&nbsp;
     <span ng-click="mainPage()" style="cursor:pointer ;color:var(--themeColor)"> <i class="fa fa-shopping-cart fa-lg"></i>
           <span style="background-color:var(--themeColor);height: 20px;width: 20px;  border-radius: 50%;display: table-cell;text-align: center;vertical-align: middle;color:white;position:relative;right: 5px" ng-if="addToCart.length>0" class="text-center">{{addToCart.length}}</span>
     </span>
