--- a/employees/static/ngTemplates/app.employees.dash.html
+++ b/employees/static/ngTemplates/app.employees.dash.html
@@ -34,7 +34,7 @@
       </div>
     </div>
 
-    <div class="row">
+    <div class="row" style="margin: 0 2em 0  2em;">
       <h4 style="margin-left: 2em;">Attrition share by Time Dimensions</h4>
       <div class="col-md-4">
         <canvas id="bar" class="chart chart-bar" chart-data="bardata" chart-labels="barlabels" chart-series="barseries" style="height:220px">
