--- a/support/static/ngTemplates/app.projects.service.item.html
+++ b/support/static/ngTemplates/app.projects.service.item.html
@@ -1,7 +1,10 @@
 <div class="col-md-4" style="padding-bottom:20px;padding-left:10px;padding-right:10px;" ng-controller="businessManagement.projects.service.item" ng-click="rowActionClicked('details');$event.stopPropagation();">
-  <div class="container-fluid card" style="border: 1px solid rgb(51, 122, 183);">
+  <div class="container-fluid card" style="border: 1px solid rgb(51, 122, 183);cursor:pointer;">
     <div class="row text-center" style="height:6vh;">
-      <div class="col-md-12" style="position:relative;display:block;">
+      <div class="col-md-1" style="position:relative;display:block;color:{{data.status=='created'?'#F4F2F1':''}}{{data.status=='sent_for_approval'?'#F08080':''}}{{data.status=='approved'?'#91cf91':''}}{{data.status=='ongoing'?'#9bd5f9':''}}">
+        <i class="fa fa-circle fa-lg" style="margin-top:10px;"></i>
+    </div>
+      <div class="col-md-11" style="position:relative;display:block;">
         <div class="row" style="padding-left:10px;">
           <h3>{{data.title}}</h3>
         </div>
@@ -53,7 +56,7 @@
             </span>
           </div>
           <div class="row">
-            <span class="pull-right" style="cursor:pointer;"  mwl-confirm title="Delete" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="rowActionClicked('delete');$event.stopPropagation();" confirm-button-type="default" cancel-button-type="default"></i>
+            <span class="pull-right" style="cursor:pointer;" ng-click="$event.stopPropagation()" mwl-confirm title="Delete" message="Are you sure?" confirm-text="Yes <i class='fa fa-check'></i>" cancel-text="No" on-confirm="rowActionClicked('delete');" confirm-button-type="default" cancel-button-type="default"></i>
               <i class="fa fa-trash fa-lg" style="margin-top:15px;"></i>
             </span>
           </div>
