--- a/performance/static/ngTemplates/app.performance.dash.html
+++ b/performance/static/ngTemplates/app.performance.dash.html
@@ -3,7 +3,7 @@
     <breadcrumb></breadcrumb>
 
     <div class="row">
-      <div class="col-md-4">
+      <div class="col-md-4 text-center firstrow" >
          <h3>OEE</h3>
          <span>85%</span>
          <div class="caret1 text-center"><span>3%</span></div>
